Ajustando a page Manager Profile v05

--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -10,7 +10,8 @@
     top: 0;
     width: 100%;
     z-index: 1000;
-    border-bottom: 1px solid #ccc ;
+    border-bottom: 1px solid #ccc;
+    box-shadow: 1px ;
 
 
     .ng-logo {
