--- a/src/app/features/pages/my-account/my-account.component.scss
+++ b/src/app/features/pages/my-account/my-account.component.scss
@@ -1,15 +1,257 @@
 .ng-main {
     width: 100%;
-    height: 100vh;
+    background: #fff;
 
-    
-    .ng-logo {
-        width: 150px;
-        height: 55px;
-        padding: 5px;
-        background-image: url('/logo.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        cursor: pointer;
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+        .ng-perfil {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            cursor: pointer;
+
+            .ng-perfil-name {
+                font-size: 14px;
+                color: #fff;
+                text-decoration: none;
+            }
+
+            .avatar {
+                width: 85px;
+                height: 85px;
+                display: flex;
+                border-radius: 50%;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .ng-avatar-icon {
+                width: 85px;
+                height: 85px;
+                background-color: #ddd;
+                color: #fff;
+                border-radius: 50%;
+                line-height: 85px;
+                text-align: center;
+                font-size: 34px;
+            }
+        }
+
+        .profile {
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        .btn-profile {
+            display: flex;
+            align-items: center;
+            background-color: transparent;
+            padding: 5px 10px;
+            border-radius: 20px;
+            border: 1px solid #ddd;
+            color: #fff;
+            gap: 0 3px;
+            cursor: pointer;
+
+            .ng-menu-icon {
+                font-size: 20px;
+            }
+
+            .ng-menu-name {
+                font-size: 11px;
+            }
+        }
+
+
+        .btn-menu {
+            display: flex;
+            align-items: center;
+            border: none;
+            gap: 0 10px;
+            background-color: transparent;
+            cursor: pointer;
+
+            .ng-menu-icon {
+                width: 35px;
+                height: 35px;
+                font-size: 28px;
+                color: #333;
+            }
+
+            .ng-menu-name {
+                font-size: 14px;
+                font-weight: 550;
+                color: #333;
+            }
+        }
+
+        .perfil-principal {
+            width: 100%;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-direction: column;
+        }
+
+        .btn-logOut {
+            background: rgba(165, 4, 4, 0.9);
+            margin-top: 30px;
+            padding: 10px 30px;
+            border-radius: 8px;
+            border: none;
+
+            .ng-menu-icon,
+            .ng-menu-name {
+                color: #fff;
+                text-align: center;
+            }
+        }
+
+    }
+
+    .container1 {
+        background: #3d5996;
+        color: #ddd;
+        padding: 30px;
+    }
+
+
+    .container2 {
+        border: none;
+    }
+}
+
+.btn-voltar {
+    position: fixed;
+    top: 20px;
+    left: 15px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000;
+
+    mat-icon {
+        color: #fff;
+    }
+}
+
+
+
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .ng-main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 10px;
+        gap: 20px 0;
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            gap: 10px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            border-radius: 12px;
+
+            .ng-perfil {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 10px;
+                cursor: pointer;
+                width: 100%;
+
+                .ng-perfil-name {
+                    font-size: 14px;
+                    font-weight: 600;
+                }
+
+                .avatar {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 55px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+
+                .ng-avatar-icon {
+                    width: 100px;
+                    height: 100px;
+                    background-color: #ccc;
+                    border-radius: 50%;
+                    line-height: 100px;
+                    text-align: center;
+                    font-size: 28px;
+                }
+            }
+
+            .btn-menu {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                border: none;
+                width: 200px;
+                height: 80px;
+                padding: 10px;
+                border-radius: 8px;
+                border: 1px solid #ccc;
+
+                .ng-menu-icon {
+                    width: 60px;
+                    height: 60px;
+                    font-size: 28px;
+                    color: #1e3464;
+                }
+
+                .ng-menu-name {
+                    font-size: 12px;
+                    font-weight: 550;
+                    color: #1e3464;
+                }
+            }
+
+
+            .perfil-principal {
+                width: 100%;
+                justify-content: end;
+                align-items: center;
+                flex-direction: row;
+            }
+
+            .profile {
+                width: 100%;
+                justify-content: flex-end;
+            }
+
+        }
+
+        .container1 {
+            background: #3d5996;
+            color: #ddd;
+            height: 200px;
+            margin: 0;
+        }
+
     }
 }
