--- a/src/app/features/pages/profileEdition/profileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/profileEdition.component.scss
@@ -1,20 +1,17 @@
 .ng-main {
-    width: 100%;
+  width: 100%;
+  background: #f2f2f2;
+  padding-top: 10px;
+  padding-bottom: 80px;
 
-    
-    .ng-logo {
-        width: 150px;
-        height: 55px;
-        padding: 5px;
-        background-image: url('/logo.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        cursor: pointer;
-    }
-}
 
-@media screen and (min-width: 768px) {  
-  body, app-root {
-  padding-top: 46px;
-}
+  .ng-logo {
+    width: 150px;
+    height: 55px;
+    padding: 5px;
+    background-image: url('/logo.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
 }
