--- a/src/app/features/pages/my-account/my-account.component.html
+++ b/src/app/features/pages/my-account/my-account.component.html
@@ -16,9 +16,13 @@
                         person
                     </mat-icon>
                     }@else {
-                    <div class="avatar">
+                    <div class="avatar" (click)="abrirModalAlterarImagem()">
                         <img [src]="authDecodeUser.getAvatar()" />
+                        <div class="camera-overlay">
+                            <mat-icon class="camera-icon">photo_camera</mat-icon>
+                        </div>
                     </div>
+
                     }
                     <div>
                         <small class="ng-perfil-name">Olá, <b>{{authDecodeUser.getName().split("
@@ -52,3 +56,8 @@
         </div>
     </div>
 </app-page-container>
+
+@if (modalAtivo) {
+<app-aside-modal (emitModal)="ativaModal()">
+</app-aside-modal>
+}
