--- a/src/app/features/pages/my-account/my-account.component.scss
+++ b/src/app/features/pages/my-account/my-account.component.scss
@@ -21,12 +21,11 @@
             }
 
             .avatar {
-                width: 85px;
-                height: 85px;
-                display: flex;
+                position: relative;
+                width: 80px;
+                height: 80px;
                 border-radius: 50%;
-                align-items: center;
-                justify-content: center;
+                overflow: hidden;
                 cursor: pointer;
 
                 img {
@@ -34,7 +33,31 @@
                     height: 100%;
                     object-fit: cover;
                 }
+
+                .camera-overlay {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0, 0, 0, 0.4);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    opacity: 0;
+                    transition: opacity 0.2s ease-in-out;
+                }
+
+                .camera-icon {
+                    color: white;
+                    font-size: 24px;
+                }
+
+                &:hover .camera-overlay {
+                    opacity: 1;
+                }
             }
+
 
             .ng-avatar-icon {
                 width: 85px;
@@ -180,9 +203,9 @@
                 }
 
                 .avatar {
-                    width: 100px;
-                    height: 100px;
-                    border-radius: 55px;
+                    width: 120px;
+                    height: 120px;
+                    border-radius: 60px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -196,11 +219,11 @@
                 }
 
                 .ng-avatar-icon {
-                    width: 100px;
-                    height: 100px;
+                    width: 120px;
+                    height: 120px;
                     background-color: #ccc;
                     border-radius: 50%;
-                    line-height: 100px;
+                    line-height: 120px;
                     text-align: center;
                     font-size: 28px;
                 }
@@ -249,7 +272,7 @@
         .container1 {
             background: #3d5996;
             color: #ddd;
-            height: 200px;
+            height: 180px;
             margin: 0;
         }
 
