Criando update avatar v02

--- a/src/app/features/pages/my-account/my-account.component.html
+++ b/src/app/features/pages/my-account/my-account.component.html
@@ -59,5 +59,6 @@
 
 @if (modalAtivo) {
 <app-aside-modal (emitModal)="ativaModal()">
+    <app-avatarUser (fecharModal)="ativaModal()"></app-avatarUser>
 </app-aside-modal>
 }
