--- a/src/app/shared/component/utius/utius.component.html
+++ b/src/app/shared/component/utius/utius.component.html
@@ -13,7 +13,7 @@
             <small>Ou até 3x no cartão </small>
         </div>
     </div>
-    <div class="ng-btn">
+    <!-- <div class="ng-btn">
         <button mat-raised-button class="btn">Comprar</button>
-    </div>
+    </div> -->
 </div>
