--- a/src/app/features/pages/categorias/categorias.component.scss
+++ b/src/app/features/pages/categorias/categorias.component.scss
@@ -1,12 +1,22 @@
 .main{
+    height: 100vh;
     background-color: #F2F2F2;
     width: 100%;
+    overflow-y: auto;
+           position: relative;
+           scrollbar-width: thin;
+           scrollbar-color: #d2d2;
+
+    .header{
+        width: 100%;
+        z-index: 999;
+        position: fixed;
+    }
 .ng-categoria{
     display: flex;
     flex-direction: column;
     flex: 1;
     .container-area{
-        background-color: #FFFFFF;
         margin-bottom: 20px;
         .ng-itens{
             display: flex;
@@ -20,12 +30,29 @@
     }
     .propaganda{
         margin: auto 56px;
+        gap: 10px 0;
+        
     }
     
 }
 }
 @media screen and (min-width: 768px) {
     .main {
-        padding-top: 45px;
+
+        .ng-categoria {
+            .container-area {
+               margin-bottom: 20px;
+                .ng-itens {
+                    padding: 2px 156px;
+                }
+            }
+
+            .propaganda {
+                margin: auto 56px;
+
+            }
+
+        }
     }
+
 }
