--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -1,4 +1,5 @@
 .ng-header {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     height: 55px;
@@ -6,12 +7,10 @@
     padding: 0 20px;
     background-color: #0d1d3f;
     color: #DDD;
-    position: fixed;
     top: 0;
-    width: 100%;
-    z-index: 1000;
     border-bottom: 1px solid #ccc;
     box-shadow: 1px ;
+    
 
 
     .ng-logo {
@@ -65,6 +64,7 @@
         display: flex;
         align-items: center;
         gap: 10px;
+        z-index: 1000;
         cursor: pointer;
 
         .ng-perfil-name {
@@ -168,8 +168,8 @@
     }
 }
 
-.ng-isAdmin {
-    background-color: #F2F2F2;
+.admin {
+    background-color: #FFF;
     color: #333;
 }
 
@@ -181,6 +181,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     position: fixed;
+    z-index: 999;
 
     .menu_drop {
         display: flex;
