--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     width:220px;
-    height:300px;
+    height:100%;
     padding:  5px;
     border-radius: 3px;
-    border: 1px solid #e0e0e0;
+    // border: 1px solid #e0e0e0;
     .ng-descricao{
         width: 100%;
         font-family: var(--font-family);
