--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -1,12 +1,13 @@
 .ng-body {
     display: flex;
+
     aside {
+        box-sizing: border-box;
         border-right: 1px solid #eee;
         //    background-color: #0d1d3f;
 
         .ng-logo {
-            
-            width: 350px;
+            width: 100%;
             height: 54px;
             padding-right: 5px;
             background-size: contain;
@@ -28,7 +29,8 @@
     }
 
     .main {
-      
+        flex: 1;
+        background-color: #f2f2f2;
 
         .header {
             width: 100%;
@@ -38,15 +40,17 @@
             display: flex;
 
             .ng-main {
-                height:calc(100vh - 50px);
+                padding: 0 11px;
+
+                flex: 1;
+                width: 100%;
+                height: calc(100vh - 50px);
                 overflow-y: auto;
                 scrollbar-width: thin;
                 scrollbar-color: #505861 #f2f2f2;
 
                 .area-main {
-                    height: auto;
-
-
+                    width: 100%;
                 }
 
                 .footer {
@@ -63,7 +67,7 @@
 }
 
 @media screen and (max-width: 769px) {
-    .log{
+    .log {
         display: none;
     }
 }
