--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
@@ -1,6 +1,5 @@
 .ng-main {
     width: 100%;
-    background: #fff;
     padding-bottom: 80px;
     gap: 30px 0;
 
@@ -14,12 +13,13 @@
 
         .btn-menu {
             display: flex;
+            border: 0;
             align-items: center;
-            border: none;
             gap: 0 10px;
-            background-color: transparent;
+            padding: 5px 0;
+            background-color:#FFF;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
             cursor: pointer;
-
             .ng-menu-icon {
                 width: 35px;
                 height: 35px;
@@ -33,6 +33,10 @@
                 color: #333;
             }
         }
+        .btn-menu:hover{
+            transform: scale(0.97);
+            background-color: rgba(0, 0, 0, 0.05);
+        }
 
         .perfil-principal {
             width: 100%;
@@ -42,7 +46,7 @@
         }
 
         .btn-logOut {
-            background: rgba(165, 4, 4, 0.9);
+            background: rgba(199, 7, 7, 0.9);
             margin-top: 30px;
             padding: 10px 30px;
             border-radius: 8px;
@@ -69,7 +73,7 @@
     top: 20px;
     left: 15px;
     background-color: transparent;
-    border: none;
+    border: 0;
     font-size: 24px;
     cursor: pointer;
     z-index: 1000;
@@ -103,12 +107,11 @@
                 display: flex;
                 align-items: center;
                 flex-direction: column;
-                border: none;
                 width: 200px;
-                height: 80px;
+                height: 82px;
                 padding: 10px;
                 border-radius: 8px;
-                border: 1px solid #ccc;
+                border: 1px solid rgba(0, 0, 0, 0.1);
 
                 .ng-menu-icon {
                     width: 60px;
