--- a/src/app/features/pages/my-account/my-account.component.html
+++ b/src/app/features/pages/my-account/my-account.component.html
@@ -1,4 +1,5 @@
-<app-page-container>
+@if (usuario.nome!==null) {
+    <app-page-container>
     <div class="ng-main">
 
         @if(isVisible) {
@@ -11,24 +12,25 @@
         <div class="container container1">
             <section class="ng-perfil perfil-principal">
                 <section class="ng-perfil">
-                    @if (!authDecodeUser.getAvatar()) {
-                    <mat-icon class="ng-avatar-icon">
-                        person
-                    </mat-icon>
-                    }@else {
+                    @if (usuario.avatar!==null) {
                     <div class="avatar" (click)="abrirModalAlterarImagem()">
-                        <img [src]="authDecodeUser.getAvatar()" />
+                        <img [src]="usuario.avatar" />
                         <div class="camera-overlay">
                             <mat-icon class="camera-icon">photo_camera</mat-icon>
                         </div>
                     </div>
+                    }@else {
+                     <mat-icon class="ng-avatar-icon">
+                        person
+                    </mat-icon>
 
                     }
-                    <div>
-                        <small class="ng-perfil-name">Olá, <b>{{authDecodeUser.getName().split("
-                                ")[0]}}</b>!</small><br />
-                        <small class="ng-perfil-name">{{ authDecodeUser.getSub() }}</small>
+                         <div>
+                        <small class="ng-perfil-name">Olá, <b>{{usuario.nome.split("
+                                ")[0]}}</b></small><br />
+                        <small class="ng-perfil-name">{{ usuario.email }}</small>
                     </div>
+                    
                 </section>
                 <section class="ng-perfil profile">
 
@@ -65,4 +67,9 @@
 <app-aside-modal (emitModal)="ativaModal()">
     <app-avatarUser (fecharModal)="ativaModal()"></app-avatarUser>
 </app-aside-modal>
+}
+}@else{
+   <ng-template class="usuario">
+    <p>Carregando dados de usuário...</p>
+</ng-template>
 }
