--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -9,8 +9,8 @@
     color: #DDD;
     top: 0;
     border-bottom: 1px solid #ccc;
-    box-shadow: 1px ;
-    
+    box-shadow: 1px;
+
 
 
     .ng-logo {
@@ -81,8 +81,8 @@
             cursor: pointer;
 
             img {
-                width: 100%;
-                height: 100%;
+                width: 35px;
+                height: 35px;
                 object-fit: cover;
             }
         }
@@ -174,16 +174,19 @@
 }
 
 .menu {
-    background-color: #0a1630;
     right: 0;
-    top: 55px;
-    position: absolute;
+    margin-right: 5px;
+    top: 9px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    position: fixed;
-    z-index: 999;
+    position: relative;
 
     .menu_drop {
+        background-color: #0a1630;
+        position: fixed;
+        z-index: 1000;
+        right: 0;
+        margin-right: 10px;
         display: flex;
         flex-direction: column;
 
