--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -65,7 +65,6 @@
         align-items: center;
         gap: 10px;
         z-index: 1000;
-        cursor: pointer;
 
         .ng-perfil-name {
             font-size: 12px;
@@ -83,6 +82,7 @@
             img {
                 width: 35px;
                 height: 35px;
+                border-radius: 50%;
                 object-fit: cover;
             }
         }
@@ -95,6 +95,10 @@
             line-height: 30px;
             text-align: center;
         }
+    }
+
+    .ng-perfil02 {
+        cursor: pointer;
     }
 
     form input {
