Corrigindo update avatar/header mobile v03

--- a/src/app/features/pages/my-account/avatarUser/avatarUser.component.html
+++ b/src/app/features/pages/my-account/avatarUser/avatarUser.component.html
@@ -19,7 +19,7 @@
 
   <div class="buttons">
     <label for="fileInput" class="ng-btn">
-      <input id="fileInput" type="file" (change)="onFileSelected($event)" hidden />
+      <input #fileInput id="fileInput" type="file" (change)="onFileSelected($event)" hidden />
       Escolher Imagem
     </label>
 
